--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -47,45 +47,49 @@
 				}
 			}
 		}
+		
+		@include columnWidths($layoutSize);
+	}
+}
 
-		[class*="-#{$layoutSize}hide"],
-		[class*="-#{$layoutSize}0"] {
-			display: none;
-		}
+@mixin columnWidths($layoutSize) {
 
-		$selector: null;			
+	[class*="-#{$layoutSize}hide"],
+	[class*="-#{$layoutSize}0"] {
+		display: none;
+	}
+// [class^="#{$gridColumn}"]
+	$selector: null;			
 
-		@for $colWidth from 1 through 11 {
+	@for $colWidth from 1 through 11 {
 
-			$thisSelector: #{'[class*="-#{$layoutSize}#{$colWidth}"]'};
-			
-			#{$thisSelector} {
-				width: gridColumnWidth($colWidth);
-			}
-			
-			// generates a comma separated selector for each of the column widths from 1 to 11
-			@if ($selector) {
-				$selector: append($selector, $thisSelector, comma);
-			} @else {
-				$selector: $thisSelector;
-			}
-			
+		$thisSelector: #{'[class*="-#{$layoutSize}#{$colWidth}"]'};
+		
+		#{$thisSelector} {
+			width: gridColumnWidth($colWidth);
 		}
 		
-		@if ($layoutSize != d) {
-			/* ensures d12 and d0 can be over-ridden by styles for #{$layoutSize} layout */
-			#{$selector} {
-				float: left;
-				clear: none;
-				display: block;	
-			}
+		// generates a comma separated selector for each of the column widths from 1 to 11
+		@if ($selector) {
+			$selector: append($selector, $thisSelector, comma);
+		} @else {
+			$selector: $thisSelector;
 		}
-
-		[class*="-#{$layoutSize}12"]{
-		    float: none;
-		    clear: both;
-			width: 100%;
+		
+	}
+	
+	@if ($layoutSize != $default) {
+		/* ensures d12 and d0 can be over-ridden by styles for #{$layoutSize} layout */
+		#{$selector} {
+			float: left;
+			clear: none;
+			display: block;	
 		}
+	}
 
+	[class*="-#{$layoutSize}12"]{
+	    float: none;
+	    clear: both;
+		width: 100%;
 	}
 }
